policies/gatekeeper/pss-baseline-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPBaseline
metadata:
  name: pss-baseline-ns
spec:
  match:
    namespaces: ["apps-prod"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
