policies/gatekeeper/restrict-privileged-containers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedCapabilities
metadata:
  name: disallow-privileged-capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["apps-prod"]
  parameters:
    allowedCapabilities: []
